# tabpfn-time-series

./: .gitignore  demo.ipynb  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  pull_request.yml
gift_eval/: dataset_definition.py  evaluate.py  evaluate_multigpu.py  run_evals.sh  run_random_retrieval_evals.sh  setup.sh  tabpfn_ts_wrapper.py  tabpfn_ts_wrapper_multigpu.py
gift_eval/debugging/: tsdf_retrieval_debug.py
gift_eval/plotting/: attention_viz.ipynb  check_data_splits.ipynb  create_plots.ipynb
gift_eval/plotting/figures/: tidy_eval_metrics_MAE_0.5_.csv  tidy_eval_metrics_MASE_0.5_.csv  tidy_eval_metrics_MSE_0.5_.csv  tidy_eval_metrics_mean_weighted_sum_quantile_loss.csv  tidy_eval_metrics_sMAPE_0.5_.csv
tabpfn_time_series/: __init__.py  data_preparation.py  plot.py  predictor.py  tabpfn_worker.py
tabpfn_time_series/experimental/evaluation/: data.py  evaluate_pipeline.py  evaluate_utils.py
tabpfn_time_series/experimental/features/: dataset_seasonality_pipeline.py  feature_transformer.py
tabpfn_time_series/experimental/finetuning/: callbacks.py  lightning_model.py  logits_smoothie.py  main_finetune.py  ood.py  overfit-meta-train.py  test.ipynb  visualize_samples.py
tabpfn_time_series/experimental/noisy_transform/: tabpfn_noisy_transform_predictor.py
tabpfn_time_series/features/: __init__.py  auto_features.py  auto_seasonal_features.py  base.py  basic_features.py  calendar_features.py  feature_transformer.py  pipeline_configs.py  running_index_features.py  utils.py
tabpfn_time_series/worker/: base_inference_engine.py  model_adapter.py  parallel.py  tabpfn_inference_engine.py  tabpfn_model_adapter.py
tests/: test_feature_pipeline.py  test_predictor.py
(+587 files in other folders)
