[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "tabpfn_time_series"
dynamic = ["version"]
authors = [{ name = "Liam Shi Bin Hoo", email = "hoos@tf.uni-freiburg.de" }]
description = "Zero-shot time series forecasting with TabPFNv2"
readme = "README.md"
# requires-python = ">=3.10"
requires-python = ">=3.11"  # for development
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "tqdm",
    "pandas>=2.1.2, <2.2.0",
    "gluonts>=0.16.0",
    "tabpfn-client>=0.1.7",
    "tabpfn>=2.1.0",
    "statsmodels>=0.14.5",
    "datasets>=4.0",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.1",
    "ujson>=5.10.0",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "wandb>=0.19.8",
    "submitit>=1.5.2",
    "ruff~=0.12.0",
    "pre-commit",
    "twine",
    "build",
    "hatch",
    "hatch-vcs",
    "pytest",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
]
eval_tabdpt = [
    "tabpfn_time_series[dev]",
    "tabdpt @ git+https://github.com/liam-sbhoo/TabDPT-inference.git"
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
exclude = ["docs", "gift_eval", "tabpfn_time_series/experimental"]

[tool.hatch.build.targets.sdist]
exclude = ["docs", "gift_eval", "tabpfn_time_series/experimental"]

[project.urls]
"Homepage" = "https://github.com/liam-sbhoo/tabpfn-time-series"
"Bug Tracker" = "https://github.com/liam-sbhoo/tabpfn-time-series/issues"
